# protected.core.trade

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml
scripts/: build-wheel.sh
src/honeytrade_core/: __init__.py  license_guard.py  strategy.py
